package music.playlist.service.activity;

import music.playlist.service.converters.ModelConverter;
import music.playlist.service.dynamodb.PlaylistDao;
import music.playlist.service.dynamodb.models.AlbumTrack;
import music.playlist.service.dynamodb.models.Playlist;
import music.playlist.service.exceptions.PlaylistNotFoundException;
import music.playlist.service.models.SongModel;
import music.playlist.service.models.SongOrder;
import music.playlist.service.models.requests.GetPlaylistSongsRequest;
import music.playlist.service.models.results.GetPlaylistSongsResult;
import com.amazonaws.services.lambda.runtime.Context;
import com.amazonaws.services.lambda.runtime.RequestHandler;
import org.apache.logging.log4j.LogManager;
import org.apache.logging.log4j.Logger;

import javax.inject.Inject;
import java.util.Collections;
import java.util.List;

/**
 * Implementation of the GetPlaylistSongsActivity for the MusicPlaylistService's GetPlaylistSongs API.
 *
 * This API allows the customer to get the list of songs of a saved playlist.
 */
public class GetPlaylistSongsActivity implements RequestHandler<GetPlaylistSongsRequest, GetPlaylistSongsResult> {
    private final Logger log = LogManager.getLogger();
    private final PlaylistDao playlistDao;

    /**
     * Instantiates a new GetPlaylistSongsActivity object.
     *
     * @param playlistDao PlaylistDao to access the playlist table.
     */
    @Inject
    public GetPlaylistSongsActivity(PlaylistDao playlistDao) {
        this.playlistDao = playlistDao;
    }

    /**
     * This method handles the incoming request by retrieving the playlist from the database.
     * <p>
     * It then returns the playlist's song list.
     * <p>
     * If the playlist does not exist, this should throw a PlaylistNotFoundException.
     *
     * @param getPlaylistSongsRequest request object containing the playlist ID
     * @return getPlaylistSongsResult result object containing the playlist's list of API defined {@link SongModel}s
     */
    @Override
    public GetPlaylistSongsResult handleRequest(final GetPlaylistSongsRequest getPlaylistSongsRequest, Context context) {
        log.info("Received GetPlaylistSongsRequest {}", getPlaylistSongsRequest);

        Playlist playlist = playlistDao.getPlaylist(getPlaylistSongsRequest.getId());
        if (playlist == null) {
            throw new PlaylistNotFoundException();
        }

        List<AlbumTrack> songList = playlist.getSongList();

        SongOrder order = getPlaylistSongsRequest.getOrder();

        if (order == SongOrder.REVERSED) {
            Collections.reverse(songList);
        } else if (order == SongOrder.SHUFFLED) {
            Collections.shuffle(songList);
        } else if (order != null && order != SongOrder.DEFAULT) {
            throw new IllegalArgumentException();
        }

        return GetPlaylistSongsResult.builder()
                .withSongList(new ModelConverter().toSongModelList(songList))
                .build();
    }
}
