package music.playlist.service.exceptions;

public class InvalidAttributeChangeException extends RuntimeException {
}
